@@ -102,7 +102,8 @@ class PPFuzzTester {
 		// This resolves a few differences between the old preprocessor and the 
 		// XML-based one, which doesn't like illegals and converts line endings.
 		// It's done by the MW UI, so it's a reasonably legitimate thing to do.
-		$s = UtfNormal::cleanUp( $s );
+		global $wgContLang;
+		$s = $wgContLang->normalize( $s );
 		return $s;
 	}
 
